Bug 337979 - Regression: standard shortcuts lost contexts, now they are unclear for translators
Summary: Regression: standard shortcuts lost contexts, now they are unclear for transl...
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kconfig
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Matthew Dawson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-08-02 11:25 UTC by Alexander Potashev
Modified: 2014-08-10 16:08 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Potashev 2014-08-02 11:25:57 UTC
In the commit 29354344ef888b1b6c48b5c0b5d1758e5525022b "allow the extraction of the shortcut names for translation" the context strings (e.g. "@action Go to main page" for "Home") were lost. I understand that before this commit these messages were not translatable at all in the KConfig framework. But in KDELibs4 they were normally translatable and did have the contexts, so in KF5's KConfig we have a regression against the respective part of KDELibs4.

The contexts are important because after they have been removed, translators to some languages (namely Dutch and Ukrainian, may be more) got "Home"/"End" as names of keys on keyboard and translated them wrongly.

Please revive the contexts.
Comment 1 Matthew Dawson 2014-08-02 17:08:29 UTC
I think I've fixed it with this RR: https://git.reviewboard.kde.org/r/119577/ .
Comment 2 Matthew Dawson 2014-08-10 15:30:37 UTC
Git commit 0005ba7627cbe3bef9d499d720a162f1064361c8 by Matthew Dawson.
Committed on 02/08/2014 at 16:57.
Pushed by mdawson into branch 'master'.

Allow translations to have context again.

Switch to using QT_TRANSLATE_NOOP3 so that context information can be
given for actions, allowing the translators to do better translations.
FIXED-IN: 5.2.0
REVIEW: 119577

M  +95   -93   src/gui/kstandardshortcut.cpp

http://commits.kde.org/kconfig/0005ba7627cbe3bef9d499d720a162f1064361c8