Allow translations to have context again.

Switch to using QT_TRANSLATE_NOOP3 so that context information can be
given for actions, allowing the translators to do better translations.

BUG: 337979
FIXED-IN: 5.2.0
REVIEW: 119577