src/gui/kstandardshortcut.cpp
@@ -42,8 +42,8 @@ struct KStandardShortcutInfo {
      */
     const char *name;
 
-    //! Localized label for user-visible display
-    const char *description;
+    //! Localized label for user-visible display, including translation context.
+    struct { const char *text; const char *context; } description;
 
     //! The keys for this shortcut
     int cutDefault, cutDefault2;
@@ -69,104 +69,104 @@ struct KStandardShortcutInfo {
 // Read the comments of the big enum in kstandardshortcut.h before you change anything!
 static KStandardShortcutInfo g_infoStandardShortcut[] = {
 //Group File,
-    { AccelNone, 0, 0, 0, 0, QList<QKeySequence>(), false },
-    { Open, "Open", (QT_TRANSLATE_NOOP("KStandardShortcut", "Open")), CTRL(O), 0, QList<QKeySequence>(), false },
-    { New, "New", QT_TRANSLATE_NOOP("KStandardShortcut", "New"), CTRL(N), 0, QList<QKeySequence>(), false },
-    { Close, "Close", QT_TRANSLATE_NOOP("KStandardShortcut", "Close"), CTRL(W), CTRL(Escape), QList<QKeySequence>(), false },
-    { Save, "Save", QT_TRANSLATE_NOOP("KStandardShortcut", "Save"), CTRL(S), 0, QList<QKeySequence>(), false },
-    { Print, "Print", QT_TRANSLATE_NOOP("KStandardShortcut", "Print"), CTRL(P), 0, QList<QKeySequence>(), false },
-    { Quit, "Quit", QT_TRANSLATE_NOOP("KStandardShortcut", "Quit"), CTRL(Q), 0, QList<QKeySequence>(), false },
+    { AccelNone, 0, 0, 0, 0, 0, QList<QKeySequence>(), false },
+    { Open, "Open", QT_TRANSLATE_NOOP3("KStandardShortcut", "Open", "@action"), CTRL(O), 0, QList<QKeySequence>(), false },
+    { New, "New", QT_TRANSLATE_NOOP3("KStandardShortcut", "New", "@action"), CTRL(N), 0, QList<QKeySequence>(), false },
+    { Close, "Close", QT_TRANSLATE_NOOP3("KStandardShortcut", "Close", "@action"), CTRL(W), CTRL(Escape), QList<QKeySequence>(), false },
+    { Save, "Save", QT_TRANSLATE_NOOP3("KStandardShortcut", "Save", "@action"), CTRL(S), 0, QList<QKeySequence>(), false },
+    { Print, "Print", QT_TRANSLATE_NOOP3("KStandardShortcut", "Print", "@action"), CTRL(P), 0, QList<QKeySequence>(), false },
+    { Quit, "Quit", QT_TRANSLATE_NOOP3("KStandardShortcut", "Quit", "@action"), CTRL(Q), 0, QList<QKeySequence>(), false },
 
 //Group Edit
-    { Undo, "Undo", QT_TRANSLATE_NOOP("KStandardShortcut", "Undo"), CTRL(Z), 0, QList<QKeySequence>(), false },
-    { Redo, "Redo", QT_TRANSLATE_NOOP("KStandardShortcut", "Redo"), CTRLSHIFT(Z), 0, QList<QKeySequence>(), false },
-    { Cut, "Cut", QT_TRANSLATE_NOOP("KStandardShortcut", "Cut"), CTRL(X), SHIFT(Delete), QList<QKeySequence>(), false },
-    { Copy, "Copy", QT_TRANSLATE_NOOP("KStandardShortcut", "Copy"), CTRL(C), CTRL(Insert), QList<QKeySequence>(), false },
-    { Paste, "Paste", QT_TRANSLATE_NOOP("KStandardShortcut", "Paste"), CTRL(V), SHIFT(Insert), QList<QKeySequence>(), false },
-    { PasteSelection, "Paste Selection", QT_TRANSLATE_NOOP("KStandardShortcut", "Paste Selection"), CTRLSHIFT(Insert), 0, QList<QKeySequence>(), false },
+    { Undo, "Undo", QT_TRANSLATE_NOOP3("KStandardShortcut", "Undo", "@action"), CTRL(Z), 0, QList<QKeySequence>(), false },
+    { Redo, "Redo", QT_TRANSLATE_NOOP3("KStandardShortcut", "Redo", "@action"), CTRLSHIFT(Z), 0, QList<QKeySequence>(), false },
+    { Cut, "Cut", QT_TRANSLATE_NOOP3("KStandardShortcut", "Cut", "@action"), CTRL(X), SHIFT(Delete), QList<QKeySequence>(), false },
+    { Copy, "Copy", QT_TRANSLATE_NOOP3("KStandardShortcut", "Copy", "@action"), CTRL(C), CTRL(Insert), QList<QKeySequence>(), false },
+    { Paste, "Paste", QT_TRANSLATE_NOOP3("KStandardShortcut", "Paste", "@action"), CTRL(V), SHIFT(Insert), QList<QKeySequence>(), false },
+    { PasteSelection, "Paste Selection", QT_TRANSLATE_NOOP3("KStandardShortcut", "Paste Selection", "@action"), CTRLSHIFT(Insert), 0, QList<QKeySequence>(), false },
 
-    { SelectAll, "SelectAll", QT_TRANSLATE_NOOP("KStandardShortcut", "Select All"), CTRL(A), 0, QList<QKeySequence>(), false },
-    { Deselect, "Deselect", QT_TRANSLATE_NOOP("KStandardShortcut", "Deselect"), CTRLSHIFT(A), 0, QList<QKeySequence>(), false },
-    { DeleteWordBack, "DeleteWordBack", QT_TRANSLATE_NOOP("KStandardShortcut", "Delete Word Backwards"), CTRL(Backspace), 0, QList<QKeySequence>(), false },
-    { DeleteWordForward, "DeleteWordForward", QT_TRANSLATE_NOOP("KStandardShortcut", "Delete Word Forward"), CTRL(Delete), 0, QList<QKeySequence>(), false },
+    { SelectAll, "SelectAll", QT_TRANSLATE_NOOP3("KStandardShortcut", "Select All", "@action"), CTRL(A), 0, QList<QKeySequence>(), false },
+    { Deselect, "Deselect", QT_TRANSLATE_NOOP3("KStandardShortcut", "Deselect", "@action"), CTRLSHIFT(A), 0, QList<QKeySequence>(), false },
+    { DeleteWordBack, "DeleteWordBack", QT_TRANSLATE_NOOP3("KStandardShortcut", "Delete Word Backwards", "@action"), CTRL(Backspace), 0, QList<QKeySequence>(), false },
+    { DeleteWordForward, "DeleteWordForward", QT_TRANSLATE_NOOP3("KStandardShortcut", "Delete Word Forward", "@action"), CTRL(Delete), 0, QList<QKeySequence>(), false },
 
-    { Find, "Find", QT_TRANSLATE_NOOP("KStandardShortcut", "Find"), CTRL(F), 0, QList<QKeySequence>(), false },
-    { FindNext, "FindNext", QT_TRANSLATE_NOOP("KStandardShortcut", "Find Next"), Qt::Key_F3, 0, QList<QKeySequence>(), false },
-    { FindPrev, "FindPrev", QT_TRANSLATE_NOOP("KStandardShortcut", "Find Prev"), SHIFT(F3), 0, QList<QKeySequence>(), false },
-    { Replace, "Replace", QT_TRANSLATE_NOOP("KStandardShortcut", "Replace"), CTRL(R), 0, QList<QKeySequence>(), false },
+    { Find, "Find", QT_TRANSLATE_NOOP3("KStandardShortcut", "Find", "@action"), CTRL(F), 0, QList<QKeySequence>(), false },
+    { FindNext, "FindNext", QT_TRANSLATE_NOOP3("KStandardShortcut", "Find Next", "@action"), Qt::Key_F3, 0, QList<QKeySequence>(), false },
+    { FindPrev, "FindPrev", QT_TRANSLATE_NOOP3("KStandardShortcut", "Find Prev", "@action"), SHIFT(F3), 0, QList<QKeySequence>(), false },
+    { Replace, "Replace", QT_TRANSLATE_NOOP3("KStandardShortcut", "Replace", "@action"), CTRL(R), 0, QList<QKeySequence>(), false },
 
 //Group Navigation
-    { Home, "Home", QT_TRANSLATE_NOOP("KStandardShortcut", "Home"), ALT(Home), Qt::Key_HomePage, QList<QKeySequence>(), false },
-    { Begin, "Begin", QT_TRANSLATE_NOOP("KStandardShortcut", "Begin"), CTRL(Home), 0, QList<QKeySequence>(), false },
-    { End, "End", QT_TRANSLATE_NOOP("KStandardShortcut", "End"), CTRL(End), 0, QList<QKeySequence>(), false },
-    { Prior, "Prior", QT_TRANSLATE_NOOP("KStandardShortcut", "Prior"), Qt::Key_PageUp, 0, QList<QKeySequence>(), false },
-    { Next, "Next", QT_TRANSLATE_NOOP("KStandardShortcut", "Next"), Qt::Key_PageDown, 0, QList<QKeySequence>(), false },
+    { Home, "Home", QT_TRANSLATE_NOOP3("KStandardShortcut", "Home", "@action Go to main page"), ALT(Home), Qt::Key_HomePage, QList<QKeySequence>(), false },
+    { Begin, "Begin", QT_TRANSLATE_NOOP3("KStandardShortcut", "Begin", "@action Beginning of document"), CTRL(Home), 0, QList<QKeySequence>(), false },
+    { End, "End", QT_TRANSLATE_NOOP3("KStandardShortcut", "End", "@action End of document"), CTRL(End), 0, QList<QKeySequence>(), false },
+    { Prior, "Prior", QT_TRANSLATE_NOOP3("KStandardShortcut", "Prior", "@action"), Qt::Key_PageUp, 0, QList<QKeySequence>(), false },
+    { Next, "Next", QT_TRANSLATE_NOOP3("KStandardShortcut", "Next", "@action Opposite to Prior"), Qt::Key_PageDown, 0, QList<QKeySequence>(), false },
 
-    { Up, "Up", QT_TRANSLATE_NOOP("KStandardShortcut", "Up"), ALT(Up), 0, QList<QKeySequence>(), false },
-    { Back, "Back", QT_TRANSLATE_NOOP("KStandardShortcut", "Back"), ALT(Left), Qt::Key_Back, QList<QKeySequence>(), false },
-    { Forward, "Forward", QT_TRANSLATE_NOOP("KStandardShortcut", "Forward"), ALT(Right), Qt::Key_Forward, QList<QKeySequence>(), false },
-    { Reload, "Reload", QT_TRANSLATE_NOOP("KStandardShortcut", "Reload"), Qt::Key_F5, Qt::Key_Refresh, QList<QKeySequence>(), false },
+    { Up, "Up", QT_TRANSLATE_NOOP3("KStandardShortcut", "Up", "@action"), ALT(Up), 0, QList<QKeySequence>(), false },
+    { Back, "Back", QT_TRANSLATE_NOOP3("KStandardShortcut", "Back", "@action"), ALT(Left), Qt::Key_Back, QList<QKeySequence>(), false },
+    { Forward, "Forward", QT_TRANSLATE_NOOP3("KStandardShortcut", "Forward", "@action"), ALT(Right), Qt::Key_Forward, QList<QKeySequence>(), false },
+    { Reload, "Reload", QT_TRANSLATE_NOOP3("KStandardShortcut", "Reload", "@action"), Qt::Key_F5, Qt::Key_Refresh, QList<QKeySequence>(), false },
 
-    { BeginningOfLine, "BeginningOfLine", QT_TRANSLATE_NOOP("KStandardShortcut", "Beginning of Line"), Qt::Key_Home, 0, QList<QKeySequence>(), false },
-    { EndOfLine, "EndOfLine", QT_TRANSLATE_NOOP("KStandardShortcut", "End of Line"), Qt::Key_End, 0, QList<QKeySequence>(), false },
-    { GotoLine, "GotoLine", QT_TRANSLATE_NOOP("KStandardShortcut", "Go to Line"), CTRL(G), 0, QList<QKeySequence>(), false },
-    { BackwardWord, "BackwardWord", QT_TRANSLATE_NOOP("KStandardShortcut", "Backward Word"), CTRL(Left), 0, QList<QKeySequence>(), false },
-    { ForwardWord, "ForwardWord", QT_TRANSLATE_NOOP("KStandardShortcut", "Forward Word"), CTRL(Right), 0, QList<QKeySequence>(), false },
+    { BeginningOfLine, "BeginningOfLine", QT_TRANSLATE_NOOP3("KStandardShortcut", "Beginning of Line", "@action"), Qt::Key_Home, 0, QList<QKeySequence>(), false },
+    { EndOfLine, "EndOfLine", QT_TRANSLATE_NOOP3("KStandardShortcut", "End of Line", "@action"), Qt::Key_End, 0, QList<QKeySequence>(), false },
+    { GotoLine, "GotoLine", QT_TRANSLATE_NOOP3("KStandardShortcut", "Go to Line", "@action"), CTRL(G), 0, QList<QKeySequence>(), false },
+    { BackwardWord, "BackwardWord", QT_TRANSLATE_NOOP3("KStandardShortcut", "Backward Word", "@action"), CTRL(Left), 0, QList<QKeySequence>(), false },
+    { ForwardWord, "ForwardWord", QT_TRANSLATE_NOOP3("KStandardShortcut", "Forward Word", "@action"), CTRL(Right), 0, QList<QKeySequence>(), false },
 
-    { AddBookmark, "AddBookmark", QT_TRANSLATE_NOOP("KStandardShortcut", "Add Bookmark"), CTRL(B), 0, QList<QKeySequence>(), false },
-    { ZoomIn, "ZoomIn", QT_TRANSLATE_NOOP("KStandardShortcut", "Zoom In"), CTRL(Plus), CTRL(Equal), QList<QKeySequence>(), false },
-    { ZoomOut, "ZoomOut", QT_TRANSLATE_NOOP("KStandardShortcut", "Zoom Out"), CTRL(Minus), 0, QList<QKeySequence>(), false },
-    { FullScreen, "FullScreen", QT_TRANSLATE_NOOP("KStandardShortcut", "Full Screen Mode"), CTRLSHIFT(F), 0, QList<QKeySequence>(), false },
+    { AddBookmark, "AddBookmark", QT_TRANSLATE_NOOP3("KStandardShortcut", "Add Bookmark", "@action"), CTRL(B), 0, QList<QKeySequence>(), false },
+    { ZoomIn, "ZoomIn", QT_TRANSLATE_NOOP3("KStandardShortcut", "Zoom In", "@action"), CTRL(Plus), CTRL(Equal), QList<QKeySequence>(), false },
+    { ZoomOut, "ZoomOut", QT_TRANSLATE_NOOP3("KStandardShortcut", "Zoom Out", "@action"), CTRL(Minus), 0, QList<QKeySequence>(), false },
+    { FullScreen, "FullScreen", QT_TRANSLATE_NOOP3("KStandardShortcut", "Full Screen Mode", "@action"), CTRLSHIFT(F), 0, QList<QKeySequence>(), false },
 
-    { ShowMenubar, "ShowMenubar", QT_TRANSLATE_NOOP("KStandardShortcut", "Show Menu Bar"), CTRL(M), 0, QList<QKeySequence>(), false },
-    { TabNext, "Activate Next Tab", QT_TRANSLATE_NOOP("KStandardShortcut", "Activate Next Tab"), CTRL(Period), CTRL(BracketRight), QList<QKeySequence>(), false },
-    { TabPrev, "Activate Previous Tab", QT_TRANSLATE_NOOP("KStandardShortcut", "Activate Previous Tab"), CTRL(Comma), CTRL(BracketLeft), QList<QKeySequence>(), false },
+    { ShowMenubar, "ShowMenubar", QT_TRANSLATE_NOOP3("KStandardShortcut", "Show Menu Bar", "@action"), CTRL(M), 0, QList<QKeySequence>(), false },
+    { TabNext, "Activate Next Tab", QT_TRANSLATE_NOOP3("KStandardShortcut", "Activate Next Tab", "@action"), CTRL(Period), CTRL(BracketRight), QList<QKeySequence>(), false },
+    { TabPrev, "Activate Previous Tab", QT_TRANSLATE_NOOP3("KStandardShortcut", "Activate Previous Tab", "@action"), CTRL(Comma), CTRL(BracketLeft), QList<QKeySequence>(), false },
 
     //Group Help
-    { Help, "Help", QT_TRANSLATE_NOOP("KStandardShortcut", "Help"), Qt::Key_F1, 0, QList<QKeySequence>(), false },
-    { WhatsThis, "WhatsThis", QT_TRANSLATE_NOOP("KStandardShortcut", "What's This"), SHIFT(F1), 0, QList<QKeySequence>(), false },
+    { Help, "Help", QT_TRANSLATE_NOOP3("KStandardShortcut", "Help", "@action"), Qt::Key_F1, 0, QList<QKeySequence>(), false },
+    { WhatsThis, "WhatsThis", QT_TRANSLATE_NOOP3("KStandardShortcut", "What's This", "@action"), SHIFT(F1), 0, QList<QKeySequence>(), false },
 
 //Group TextCompletion
-    { TextCompletion, "TextCompletion", QT_TRANSLATE_NOOP("KStandardShortcut", "Text Completion"), CTRL(E), 0, QList<QKeySequence>(), false },
-    { PrevCompletion, "PrevCompletion", QT_TRANSLATE_NOOP("KStandardShortcut", "Previous Completion Match"), CTRL(Up), 0, QList<QKeySequence>(), false },
-    { NextCompletion, "NextCompletion", QT_TRANSLATE_NOOP("KStandardShortcut", "Next Completion Match"), CTRL(Down), 0, QList<QKeySequence>(), false },
-    { SubstringCompletion, "SubstringCompletion", QT_TRANSLATE_NOOP("KStandardShortcut", "Substring Completion"), CTRL(T), 0, QList<QKeySequence>(), false },
+    { TextCompletion, "TextCompletion", QT_TRANSLATE_NOOP3("KStandardShortcut", "Text Completion", "@action"), CTRL(E), 0, QList<QKeySequence>(), false },
+    { PrevCompletion, "PrevCompletion", QT_TRANSLATE_NOOP3("KStandardShortcut", "Previous Completion Match", "@action"), CTRL(Up), 0, QList<QKeySequence>(), false },
+    { NextCompletion, "NextCompletion", QT_TRANSLATE_NOOP3("KStandardShortcut", "Next Completion Match", "@action"), CTRL(Down), 0, QList<QKeySequence>(), false },
+    { SubstringCompletion, "SubstringCompletion", QT_TRANSLATE_NOOP3("KStandardShortcut", "Substring Completion", "@action"), CTRL(T), 0, QList<QKeySequence>(), false },
 
-    { RotateUp, "RotateUp", QT_TRANSLATE_NOOP("KStandardShortcut", "Previous Item in List"), Qt::Key_Up, 0, QList<QKeySequence>(), false },
-    { RotateDown, "RotateDown", QT_TRANSLATE_NOOP("KStandardShortcut", "Next Item in List"), Qt::Key_Down, 0, QList<QKeySequence>(), false },
+    { RotateUp, "RotateUp", QT_TRANSLATE_NOOP3("KStandardShortcut", "Previous Item in List", "@action"), Qt::Key_Up, 0, QList<QKeySequence>(), false },
+    { RotateDown, "RotateDown", QT_TRANSLATE_NOOP3("KStandardShortcut", "Next Item in List", "@action"), Qt::Key_Down, 0, QList<QKeySequence>(), false },
 
-    { OpenRecent, "OpenRecent", QT_TRANSLATE_NOOP("KStandardShortcut", "Open Recent"), 0, 0, QList<QKeySequence>(), false },
-    { SaveAs, "SaveAs", QT_TRANSLATE_NOOP("KStandardShortcut", "Save As"), CTRLSHIFT(S), 0, QList<QKeySequence>(), false },
-    { Revert, "Revert", QT_TRANSLATE_NOOP("KStandardShortcut", "Revert"), 0, 0, QList<QKeySequence>(), false },
-    { PrintPreview, "PrintPreview", QT_TRANSLATE_NOOP("KStandardShortcut", "Print Preview"), 0, 0, QList<QKeySequence>(), false },
-    { Mail, "Mail", QT_TRANSLATE_NOOP("KStandardShortcut", "Mail"), 0, 0, QList<QKeySequence>(), false },
-    { Clear, "Clear", QT_TRANSLATE_NOOP("KStandardShortcut", "Clear"), 0, 0, QList<QKeySequence>(), false },
-    { ActualSize, "ActualSize", QT_TRANSLATE_NOOP("KStandardShortcut", "Actual Size"), 0, 0, QList<QKeySequence>(), false },
-    { FitToPage, "FitToPage", QT_TRANSLATE_NOOP("KStandardShortcut", "Fit To Page"), 0, 0, QList<QKeySequence>(), false },
-    { FitToWidth, "FitToWidth", QT_TRANSLATE_NOOP("KStandardShortcut", "Fit To Width"), 0, 0, QList<QKeySequence>(), false },
-    { FitToHeight, "FitToHeight", QT_TRANSLATE_NOOP("KStandardShortcut", "Fit To Height"), 0, 0, QList<QKeySequence>(), false },
-    { Zoom, "Zoom", QT_TRANSLATE_NOOP("KStandardShortcut", "Zoom"), 0, 0, QList<QKeySequence>(), false },
-    { Goto, "Goto", QT_TRANSLATE_NOOP("KStandardShortcut", "Goto"), 0, 0, QList<QKeySequence>(), false },
-    { GotoPage, "GotoPage", QT_TRANSLATE_NOOP("KStandardShortcut", "Goto Page"), 0, 0, QList<QKeySequence>(), false },
-    { DocumentBack, "DocumentBack", QT_TRANSLATE_NOOP("KStandardShortcut", "Document Back"), ALTSHIFT(Left), 0, QList<QKeySequence>(), false },
-    { DocumentForward, "DocumentForward", QT_TRANSLATE_NOOP("KStandardShortcut", "Document Forward"), ALTSHIFT(Right), 0, QList<QKeySequence>(), false },
-    { EditBookmarks, "EditBookmarks", QT_TRANSLATE_NOOP("KStandardShortcut", "Edit Bookmarks"), 0, 0, QList<QKeySequence>(), false },
-    { Spelling, "Spelling", QT_TRANSLATE_NOOP("KStandardShortcut", "Spelling"), 0, 0, QList<QKeySequence>(), false },
-    { ShowToolbar, "ShowToolbar", QT_TRANSLATE_NOOP("KStandardShortcut", "Show Toolbar"), 0, 0, QList<QKeySequence>(), false },
-    { ShowStatusbar, "ShowStatusbar", QT_TRANSLATE_NOOP("KStandardShortcut", "Show Statusbar"), 0, 0, QList<QKeySequence>(), false },
-    { SaveOptions, "SaveOptions", QT_TRANSLATE_NOOP("KStandardShortcut", "Save Options"), 0, 0, QList<QKeySequence>(), false },
-    { KeyBindings, "KeyBindings", QT_TRANSLATE_NOOP("KStandardShortcut", "Key Bindings"), 0, 0, QList<QKeySequence>(), false },
-    { Preferences, "Preferences", QT_TRANSLATE_NOOP("KStandardShortcut", "Preferences"), 0, 0, QList<QKeySequence>(), false },
-    { ConfigureToolbars, "ConfigureToolbars", QT_TRANSLATE_NOOP("KStandardShortcut", "Configure Toolbars"), 0, 0, QList<QKeySequence>(), false },
-    { ConfigureNotifications, "ConfigureNotifications", QT_TRANSLATE_NOOP("KStandardShortcut", "Configure Notifications"), 0, 0, QList<QKeySequence>(), false },
-    { TipofDay, "TipofDay", QT_TRANSLATE_NOOP("KStandardShortcut", "Tip Of Day"), 0, 0, QList<QKeySequence>(), false },
-    { ReportBug, "ReportBug", QT_TRANSLATE_NOOP("KStandardShortcut", "Report Bug"), 0, 0, QList<QKeySequence>(), false },
-    { SwitchApplicationLanguage, "SwitchApplicationLanguage", QT_TRANSLATE_NOOP("KStandardShortcut", "Switch Application Language"), 0, 0, QList<QKeySequence>(), false },
-    { AboutApp, "AboutApp", QT_TRANSLATE_NOOP("KStandardShortcut", "About Application"), 0, 0, QList<QKeySequence>(), false },
-    { AboutKDE, "AboutKDE", QT_TRANSLATE_NOOP("KStandardShortcut", "About KDE"), 0, 0, QList<QKeySequence>(), false },
+    { OpenRecent, "OpenRecent", QT_TRANSLATE_NOOP3("KStandardShortcut", "Open Recent", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { SaveAs, "SaveAs", QT_TRANSLATE_NOOP3("KStandardShortcut", "Save As", "@action"), CTRLSHIFT(S), 0, QList<QKeySequence>(), false },
+    { Revert, "Revert", QT_TRANSLATE_NOOP3("KStandardShortcut", "Revert", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { PrintPreview, "PrintPreview", QT_TRANSLATE_NOOP3("KStandardShortcut", "Print Preview", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Mail, "Mail", QT_TRANSLATE_NOOP3("KStandardShortcut", "Mail", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Clear, "Clear", QT_TRANSLATE_NOOP3("KStandardShortcut", "Clear", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ActualSize, "ActualSize", QT_TRANSLATE_NOOP3("KStandardShortcut", "Actual Size", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { FitToPage, "FitToPage", QT_TRANSLATE_NOOP3("KStandardShortcut", "Fit To Page", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { FitToWidth, "FitToWidth", QT_TRANSLATE_NOOP3("KStandardShortcut", "Fit To Width", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { FitToHeight, "FitToHeight", QT_TRANSLATE_NOOP3("KStandardShortcut", "Fit To Height", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Zoom, "Zoom", QT_TRANSLATE_NOOP3("KStandardShortcut", "Zoom", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Goto, "Goto", QT_TRANSLATE_NOOP3("KStandardShortcut", "Goto", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { GotoPage, "GotoPage", QT_TRANSLATE_NOOP3("KStandardShortcut", "Goto Page", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { DocumentBack, "DocumentBack", QT_TRANSLATE_NOOP3("KStandardShortcut", "Document Back", "@action"), ALTSHIFT(Left), 0, QList<QKeySequence>(), false },
+    { DocumentForward, "DocumentForward", QT_TRANSLATE_NOOP3("KStandardShortcut", "Document Forward", "@action"), ALTSHIFT(Right), 0, QList<QKeySequence>(), false },
+    { EditBookmarks, "EditBookmarks", QT_TRANSLATE_NOOP3("KStandardShortcut", "Edit Bookmarks", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Spelling, "Spelling", QT_TRANSLATE_NOOP3("KStandardShortcut", "Spelling", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ShowToolbar, "ShowToolbar", QT_TRANSLATE_NOOP3("KStandardShortcut", "Show Toolbar", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ShowStatusbar, "ShowStatusbar", QT_TRANSLATE_NOOP3("KStandardShortcut", "Show Statusbar", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { SaveOptions, "SaveOptions", QT_TRANSLATE_NOOP3("KStandardShortcut", "Save Options", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { KeyBindings, "KeyBindings", QT_TRANSLATE_NOOP3("KStandardShortcut", "Key Bindings", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { Preferences, "Preferences", QT_TRANSLATE_NOOP3("KStandardShortcut", "Preferences", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ConfigureToolbars, "ConfigureToolbars", QT_TRANSLATE_NOOP3("KStandardShortcut", "Configure Toolbars", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ConfigureNotifications, "ConfigureNotifications", QT_TRANSLATE_NOOP3("KStandardShortcut", "Configure Notifications", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { TipofDay, "TipofDay", QT_TRANSLATE_NOOP3("KStandardShortcut", "Tip Of Day", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { ReportBug, "ReportBug", QT_TRANSLATE_NOOP3("KStandardShortcut", "Report Bug", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { SwitchApplicationLanguage, "SwitchApplicationLanguage", QT_TRANSLATE_NOOP3("KStandardShortcut", "Switch Application Language", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { AboutApp, "AboutApp", QT_TRANSLATE_NOOP3("KStandardShortcut", "About Application", "@action"), 0, 0, QList<QKeySequence>(), false },
+    { AboutKDE, "AboutKDE", QT_TRANSLATE_NOOP3("KStandardShortcut", "About KDE", "@action"), 0, 0, QList<QKeySequence>(), false },
 
     //dummy entry to catch simple off-by-one errors. Insert new entries before this line.
-    { AccelNone, 0, 0, 0, 0, QList<QKeySequence>(), false }
+    { AccelNone, 0, 0, 0, 0, 0, QList<QKeySequence>(), false }
 };
 
 /** Search for the KStandardShortcutInfo object associated with the given @p id.
@@ -192,9 +192,10 @@ static void initialize(StandardShortcut id)
 {
     KStandardShortcutInfo *info = guardedStandardShortcutInfo(id);
 
-    // Both are needed.
+    // All three are needed.
     if (info->id != AccelNone) {
-        Q_ASSERT(info->description);
+        Q_ASSERT(info->description.text);
+        Q_ASSERT(info->description.context);
         Q_ASSERT(info->name);
     }
 
@@ -251,7 +252,8 @@ QString label(StandardShortcut id)
 {
     KStandardShortcutInfo *info = guardedStandardShortcutInfo(id);
     return QCoreApplication::translate("KStandardShortcut",
-                                       info->description);
+                                       info->description.text,
+                                       info->description.context);
 }
 
 // TODO: Add psWhatsThis entry to KStandardShortcutInfo
